# spaceshooter-game

./: .gitignore  Cargo.toml  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: main.rs  starfield-shader.glsl
