[package]
name = "my-game"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = {version = "0.4", features = ["audio"] }
macroquad-particles = "0.2.2"

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad" }

[profile.dev.package.'*']
opt-level = 3